<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="onClickDate">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewTitle"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editTextTitleHint"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/textViewDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewDuration"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/editTextDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editTextDurationHint"
            android:inputType="number" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewDate"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textViewDatePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickDate"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Switch
            android:id="@+id/switchPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewPriority"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Switch
            android:id="@+id/switchProfessional"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewProfessionnal"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewDescription"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/editTextDescriptionHint"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickButtonCancel"
                android:text="@string/buttonCancel" />

            <Button
                android:id="@+id/buttonValidate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickButtonValidate"
                android:text="@string/buttonValidate" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>