<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalendarActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <org.naishadhparmar.zcustomcalendar.CustomCalendar
            android:id="@+id/custom_calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:day_of_week_length="3"
            app:day_of_week_start_from="monday"
            app:left_button_src="@drawable/previous_icon"
            app:month_year_format="full_month__with_year"
            app:right_button_src="@drawable/next_icon">

        </org.naishadhparmar.zcustomcalendar.CustomCalendar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/calendarLegendFirst"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/calendar_legend_img_1"
                app:srcCompat="@drawable/layout_border_calendar_legend_first" />

            <TextView
                android:id="@+id/textView_calendar_legend_first"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/calendar_legend_first" />

            <ImageView
                android:id="@+id/calendarLegendSecond"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/calendar_legend_img_2"
                app:srcCompat="@drawable/layout_border_calendar_legend_second" />

            <TextView
                android:id="@+id/textView_calendar_legend_second"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/calendar_legend_second" />

            <ImageView
                android:id="@+id/calendarLegendThird"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/calendar_legend_img_3"
                app:srcCompat="@drawable/layout_border_calendar_legend_third" />

            <TextView
                android:id="@+id/textView_calendar_legend_third"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/calendar_legend_third" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewPromises"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>